# tensor_manager

./: .gitignore  README.md  install-stuff.sh  multi_process_demo.py  pyproject.toml  requirements.txt  tensor_client.py  tensor_server.py  test_tensor_server.py  usage_example.py
tensor_manager/: __init__.py  load_tensor.py  loader.py  tensor_client.py  tensor_server.py  unload_tensor.py
